kubernetes-manifests/log4shell/deployment-log4shell.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: log4shell
  namespace: log4shell
  labels:
    demo: roadshow
spec:
  replicas: 1
  selector:
    matchLabels:
      app: log4shell
  template:
    metadata:
      labels:
        app: log4shell
    spec:
      containers:
      - name: log4shell
        image: quay.io/mfoster/log4shell:latest
        securityContext:
          allowPrivilegeEscalation: false
          readonlyRootFilesystem: true
          capabilities:
            drop:
              - ALL
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "500m"
            memory: "512Mi"
