kubernetes-manifests/log4shell/everything.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: log4shell
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: log4shell
  namespace: log4shell
  labels:
    demo: roadshow
spec:
  replicas: 1
  selector:
    matchLabels:
      app: log4shell
  template:
    metadata:
      labels:
        app: log4shell
    spec:
      containers:
      - name: log4shell
        image: quay.io/mfoster/log4shell:latest
        securityContext:
          allowPrivilegeEscalation: false
          readonlyRootFilesystem: true
          capabilities:
            drop:
              - ALL
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "500m"
            memory: "512Mi"
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: log4shell-netpol
  namespace: log4shell
spec:
  egress:
  - ports:
    - port: 53
      protocol: UDP
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: frontend
    ports:
    - port: 8080
      protocol: TCP
  podSelector:
    matchLabels:
      app: log4shell
  policyTypes:
  - Ingress
  - Egress
