kubernetes-manifests/log4shell/networkpolicy-log4shell-netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: log4shell-netpol
  namespace: log4shell
spec:
  egress:
  - ports:
    - port: 53
      protocol: UDP
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: frontend
    ports:
    - port: 8080
      protocol: TCP
  podSelector:
    matchLabels:
      app: log4shell
  policyTypes:
  - Ingress
  - Egress
